# csUniSa-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tests.py
csunisa/: __init__.py  initial_value_problem.py  ivp.py  linear_multistep_method.py  lmm.py  lmm_registry.py  nonlinear.py  odes.py  pc.py  plot_utils.py  reference_solvers.py  rk.py  rk_registry.py  utils.py
csunisa/data/: lmm.csv
csunisa/data/rk/: dopri54.csv  rk4.csv  rkf45.csv
tests/: ivp_cases.py  problems.py  test_euler.py  test_midpoint.py  test_trapezoid.py  tester.py
unit_tests/: problems.py  reference_solvers.py  test_utils.py  tester.py
