[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csunisa"
version = "1.2.0"
description = "Educational numerical methods library for solving IVPs and ODEs"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Francesco R." }
]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "sympy",
]

[project.urls]
Homepage = "https://github.com/rumix-cmf/csUniSa"
Repository = "https://github.com/rumix-cmf/csUniSa"
